updating this package to work with v2.0.0 interface